test/parser/should_succeed/while.souc
main() = do
    while true do
        print "sub call"
    end while
