test/parser/should_fail/until7.souc
main() = do
	until true do
		print "sub call"
	sbroutin
end

sbroutin() = do
	until true do
		print "sub call"
end until
